fix: titled list should not shrink its elements if it gets too small

--- a/src/components/lists/titledlist/TitledList.module.scss
+++ b/src/components/lists/titledlist/TitledList.module.scss
@@ -1,6 +1,7 @@
 @import "src/css/material";
 
 .container {
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
   color: $gray-font-color;
